# gepa-viz

./: .gitignore  README.md  justfile  package-lock.json  package.json
.github/workflows/: publish.yml
client/: .gitignore  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/candidate/[id]/: page.tsx
client/app/components/: Graph.tsx  MinibatchPanel.tsx  ParetoGrid.tsx  PromptSection.tsx  Yaml.tsx
client/app/lib/: run.ts  yaml.ts
gepa_runner/: callback.py  demo_run.py  main.py  pyproject.toml  writer.py
python/: README.md  pyproject.toml  run copy.json  run.json
python/examples/: demo_run.py  fake_run.py  spam_clasf.py
python/src/gepa_viz/: __init__.py  callback.py  cli.py  server.py  writer.py
