[project]
name = "gepa-runner"
version = "0.1.0"
description = "Live GEPA-run callback that streams to gepa-viz."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gepa",
    "dspy",
    "datasets",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
gepa = { path = "../../libs/gepa", editable = true }
dspy = { path = "../../libs/dspy", editable = true }

[tool.uv]
override-dependencies = [
    "gepa",
]
