[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gepa-viz"
dynamic = ["version"]
description = "Live visualization for GEPA prompt-optimization runs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tyrin Todd", email = "tyrin@modaic.dev" }]
dependencies = [
    "gepa",
    "dspy",
    "datasets",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/modaic-ai/gepa-viz"
Repository = "https://github.com/modaic-ai/gepa-viz"

[project.scripts]
gepa-viz = "gepa_viz.cli:main"

# Version is read from git tags (e.g. v0.1.0) at build time. The git repo root
# is one level up from this Python package, so point setuptools_scm at it.
[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "src/gepa_viz/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gepa_viz"]
# Files under src/gepa_viz/static/ (populated by `just sync-static` from the
# Vite build) are picked up automatically by hatchling.

[tool.hatch.build.targets.sdist]
include = ["src/gepa_viz", "README.md"]

[tool.uv.sources]
gepa = { path = "../../libs/gepa", editable = true }
dspy = { path = "../../libs/dspy", editable = true }

[tool.uv]
override-dependencies = [
    "gepa",
]
